--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
                       <div>
                           <h4>{% t footer.newsletter %}</h4>
                           <p>{% t footer.ifsub %}</p>
-                          <a class="btn-text" href="https://t.me/fironews" target="_blank">{% t footer.newsbutton %}</a>
+                          <a class="btn-text" href="https://t.me/fironews" target="_blank"><span>{% t footer.newsbutton %}</span><i class="icons-right-small"></i></a>
                       </div>
                       <div class="social">
                           <h4>{% t footer.comm %}</h4>
