migrate bounty program docs to website
add /security.txt
add guide bounty-program.md
move links of bounty program

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                           <li><a href="https://github.com/firoorg/firo">Github</a></li>
                           <li><a href="https://sourceforge.net/projects/firoorg/">Sourceforge</a></li>
                           <li><a href="{{ site.baseurl }}/branding/">{% t footer.branding %}</a></li>
-                          <li><a href="{{ site.baseurl }}/2018/07/15/firo-vulnerability-bounty-program.html">{% t footer.vuln %}</a></li>
+                          <li><a href="{{ site.baseurl }}/guide/bounty-program.html">{% t footer.vuln %}</a></li>
                           <li><a href="https://explorer.firo.org/">{% t footer.explorer %}</a></li>
                       </ul>
                   </div>
