replace twitter footer logo with x

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
                           <div class="social-icons">
                             <a href="https://discord.gg/TGZPRbRT3Y" target="_blank"><img src="/img/site-icons/footer/discord.svg" title="Discord" alt="Discord logo"></a>
                             <a href="https://t.me/firoorg" target="_blank"><img src="/img/site-icons/footer/telegram.svg" title="Telegram" alt="Telegram logo"></a>
-                            <a href="https://twitter.com/firoorg" target="_blank"><img src="/img/site-icons/footer/twitter.svg" title="Twitter" alt="Twitter logo"></a>
+                            <a href="https://twitter.com/firoorg" target="_blank"><img src="/img/site-icons/footer/x.svg" title="X (Twitter)" alt="X (Twitter) logo"></a>
                             <a href="https://www.facebook.com/firoorg/" target="_blank"><img src="/img/site-icons/footer/facebook.svg" title="Facebook" alt="Facebook logo"></a>
                             <a href="https://www.youtube.com/c/firoorg" target="_blank"><img src="/img/site-icons/footer/youtube.svg" title="Youtube" alt="Youtube logo"></a>
                             <a href="https://www.reddit.com/r/firoproject/" target="_blank"><img src="/img/site-icons/footer/reddit.svg" title="Reddit" alt="Reddit logo"></a>
